# MAT240B_Yuehao_Gao_Meditative_Plugin

./: AdditiveSynth.cpp  AdditiveSynth.h  CMakeLists.txt  Library.cpp  Library.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  convolution.cpp
convolution/: CMakeLists.txt  convolution.cpp
pip/: CMakeLists.txt
